# upm-etsidi-visual-nav

./: .gitattributes  .gitignore  README.md
hardware_host/config/depthai/: camera.yaml
hardware_host/launch/: robot_app.launch.py
hardware_host/scripts/: start_robot.sh
hardware_host/services/: robot.service
hardware_host/src/depthai-ros/depthai_ros_driver/config/: camera.yaml  rgbd.yaml
hardware_host/src/depthai-ros/depthai_ros_driver/launch/: camera.launchRemoto.py  navegacion.launch.py  rtabmap.MapaVisual.py  rtabmap.launchNav.py  rtabmap.launchNavegacion.py  rtabmap.launchNavegacionScan.py  (+7 more)
hardware_host/src/robot_driver/: package.xml  setup.py
hardware_host/src/robot_driver/launch/: navegacion.launch.py  robot_driver.launch.py
hardware_host/src/robot_driver/robot_driver/: kinematics.py  maneuver_8.py  maneuver_L.py  maneuver_circle.py  odometry.py  roboclaw_interface.py  robot_driver_node.py
hardware_host/src/teleop_twist_qt/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
hardware_host/src/wit_imu_driver/launch/: wit901.launch.py
vins_docker/docker/: Dockerfile  ros_entrypoint.sh  run.sh
vins_docker/vins/src/VINS-Fusion-ROS2-humble-arm/vins/: CMakeLists.txt  package.xml
vins_docker/vins/src/VINS-Fusion-ROS2-humble-arm/vins/config/: vins_rviz_config.rviz
vins_docker/vins/src/VINS-Fusion-ROS2-humble-arm/vins/config/upm_robot_config/: left_oak.yaml  upm_robot.yaml
vins_docker/vins/src/VINS-Fusion-ROS2-humble-arm/vins/src/featureTracker/: feature_tracker.h
vins_docker/vins/src/VINS-Fusion-ROS2-humble-arm/vins/src/utility/: visualization.cpp
